# poetry_hw

./: pyproject.toml
hw/: do_smth.py
