[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["misha kalinin <msktareo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
do_smth = 'do_smth:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
